--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -9,6 +9,11 @@
       <link  href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico" rel="shortcut icon">   
       <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0">
       <link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1">
+      <style>
+        img{
+          height: auto !important;
+        }
+      </style>
   </head>
   <body>
       
@@ -78,4 +83,5 @@
       
       </div><!-- /#page -->
   </body>
+
 </html>
