--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout5.html
@@ -13,7 +13,13 @@
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/html5shiv.js"></script>
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/respond.min.js"></script>
     <![endif]-->
-<link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0"><link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1"></head>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0"><link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1">
+  <style>
+        img{
+          height: auto !important;
+        }
+      </style>
+</head>
 <body class="">
     
     <div id="page" class="page">
