--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
@@ -16,7 +16,7 @@
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/respond.min.js"></script>
     <![endif]-->
 </head>
-<body >
+<body style="min-height:76px;">
     
     <div id="page" class="page">
     
