change css class name

--- a/agile-frontend/WebContent/flatfull/tpl/admin-tag-management.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-tag-management.html
@@ -9,7 +9,7 @@
 <div class='row'>
 	<h1 class="pull-left font-thin h3 tagheading" style="display:none;">Tags</h1>
 
-	<div id="searchbycharacter" class=" inline-block text-center searchbycharacterdiv m-b-sm tag-div col-md-9 col-xs-12">
+	<div id="searchbycharacter" class=" inline-block text-center searchbycharacterexpanded m-b-sm tag-div col-md-9 col-xs-12">
 				<a class="searchbychar tag-alpha"    href="#" data-target="A"> A </a>
 				<a class="searchbychar tag-alpha" href="#" data-target="B">B</a>
 				<a class="searchbychar tag-alpha" href="#" data-target="C">C</a>
