Special chars validation removed for docs template add form

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-document-template-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-document-template-add.html
@@ -20,7 +20,7 @@
         					<label class="control-label col-md-3" for="pname">Name <span class="field_req">*</span></label> 
                             <div class="col-md-9">
                            		<div class="controls">
-            						<input type="text" id="pname" name="name" maxlength="50" class="required noSpecialChars form-control" placeholder="Enter Name" autocapitalize="off"/>
+            						<input type="text" id="pname" name="name" maxlength="50" class="required form-control" placeholder="Enter Name" autocapitalize="off"/>
             					</div>
                             </div>
         				</div> 
