--- a/agile-frontend/WebContent/flatfull/tpl/menu-items.html
+++ b/agile-frontend/WebContent/flatfull/tpl/menu-items.html
@@ -377,8 +377,8 @@
   <li id="ticketviewsmenu">
     <a href="#ticket-views">
       <i class="icon icon-directions"></i>
-      <i class="material-icons hidden-icon" style="display: none">filter_b_and_w</i>
-      <i class="material-icons show-icon-folded" style="display: none" data-icon-toggle="tooltip" title="Views">filter_b_and_w</i>
+      <i class="material-icons hidden-icon" style="display: none">layers</i>
+      <i class="material-icons show-icon-folded" style="display: none" data-icon-toggle="tooltip" title="Views">layers</i>
       <span>{{agile_lng_translate 'contacts-view' 'views'}}</span>
     </a>
   </li>
