Added acls issue

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-noaccess-template.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-noaccess-template.html
@@ -9,7 +9,7 @@
                                     <img alt="Clipboard" src="/img/clipboard.png">
                                 </div>
                                 <div class="box-right pull-left">
-                                    <h4 class="m-t-none">Sorry you do not have privilages to access Knowledge Base.</h4>
+                                    <h4 class="m-t-none">Sorry, you do not have the privileges to access Knowledge Base.</h4>
                                     <div class="text">
                                         Please contact your admin or account owner to enable this option.
                                     </div>
