fixed header issue and extra space in bottom

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header5.html
@@ -50,6 +50,7 @@
                         </div><!-- /.container -->
                         
     	</nav>
+        <div class='duplicate-nav' style='position:static; visibility:hidden; height:0px;' ></div>
     	</header><!-- /.item -->
     
     </div><!-- /#page -->
