--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header7.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header7.html
@@ -36,7 +36,7 @@
     						    	<div class="item active">
     						    		<div class="row">
     						    			<div class="col-md-5">
-    						    				<div class="editContent"><h3>Slideshow Heading One</h3>
+    						    				<div class="editContent"><h3 style="margin-top: 0px;">Slideshow Heading One</h3>
                                                 </div>
     						    				<div class="editContent">
     						    					<p>Proin aliquet luctus magna at convallis. Donec vitae urna ac nibh commodo dapibus. Nulla facilisi.</p>
