--- a/agile-frontend/WebContent/flatfull/tpl/contact-filter/contact-filter-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-filter/contact-filter-add.html
@@ -396,6 +396,10 @@
 													</option>
 													<option value="NOT_DEFINED" class="email phone company title address city state zip country custom_label custom_sfsadf org_custom_label org_custom_sfsadf">{{agile_lng_translate 'contacts-view' 'is-not-defined'}}
 													</option>
+													{{#is_enable_lcf_rel_cond}}
+														<option value="ON_AFTER" class="last_contacted">{{agile_lng_translate 'contacts-view' 'on-after'}}</option>
+														<option value="ON_BEFORE" class="last_contacted">{{agile_lng_translate 'contacts-view' 'on-before'}}</option>
+													{{/is_enable_lcf_rel_cond}}
 												</select>
 											</div>
 										</td>
