multicurrency option in admin settings and beta issues

--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-account-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-account-prefs.html
@@ -154,6 +154,16 @@
                         </div>
                     </div>
                     
+                    <div class="control-group form-group hidden" id="multi-currency-deals">
+                        <label class="control-label col-sm-4 col-xs-4">Deal Multi Currency</label> 
+                        <div class="controls col-sm-8 col-xs-8">
+                            <div class="checkbox">
+                                <label class="i-checks i-checks-sm">
+                                    <input type="checkbox" id="multi_currency" name="multi_currency"><i></i><small>Enables to create deals with values in multiple currencies</small>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="control-group form-group">
                     <label class="control-label col-sm-4 col-xs-4">{{agile_lng_translate 'Contacts-view' 'company-logo'}}</label> 
