--- a/agile-frontend/WebContent/flatfull/tpl/deal-update-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/deal-update-modal.html
@@ -40,8 +40,7 @@
                <select id="currency-conversion-symbols" class="required form-control" name="currency_type">                        
                        </select><!-- <div class="ccw_selector_bg"></div><div class="ccw_selector_arrows"></div> --> </div>
              <div class="p-n"> 
-              <input type="text" name="currency_conversion_value" class="required  number_with_trim form-control" min="0" max="2147483647"
-                placeholder="{{agile_lng_translate 'portlets' 'deal-value'}}"   style="float:right;"/> 
+              <input type="text" name="currency_conversion_value" class="required number_with_trim form-control" min="0" max="2147483647" placeholder="{{agile_lng_translate 'portlets' 'deal-value'}}" style="float:right;"/> 
              </div> 
             </div> 
            </div> 
