--- a/agile-frontend/WebContent/flatfull/tpl/opportunities.html
+++ b/agile-frontend/WebContent/flatfull/tpl/opportunities.html
@@ -10,11 +10,20 @@
   </div>
 
   <div class="text-ellipsis deals-name" style="font-size:13px; margin-top:-2px;">
-{{#if currency_conversion_value}}{{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}
-  {{else}}
-    {{#if_equals expected_value "0"}}{{currencySymbol}}{{expected_value}}{{/if_equals}}{{#if expected_value}}{{currencySymbol}}{{numberWithCommas expected_value}}
-    {{/if}}
-{{/if}}
+{{#if_equals currency_conversion_value "0"}}
+      <span>{{currencyType currency_type}}{{currency_conversion_value}}</span>
+    {{else}}
+      {{#if currency_conversion_value}}
+          <span>{{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}</span>
+      {{else}}
+        {{#if_equals expected_value "0"}}
+            <span>{{currencySymbol}}{{expected_value}}</span>
+          {{/if_equals}}
+          {{#if expected_value}}
+          <span>{{currencySymbol}}{{numberWithCommas expected_value}}</span>
+         {{/if}}
+      {{/if}}
+    {{/if_equals}}
 <span class="p-l-sm">{{milestone}} ({{probability}}%)</span>
   </div>
 
@@ -35,10 +44,21 @@
     <a class="text-cap">{{name}}</a>
   </div>
 </td>
-<td value="{{expected_value}}"><div class="text-ellipsis" style="width:7em">{{#if currency_conversion_value}}{{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}
-  {{else}}
-    {{#if expected_value}}{{currencySymbol}}{{numberWithCommas expected_value}}{{/if}}
-  {{/if}}</div></td>
+<td value="{{expected_value}}"><div class="text-ellipsis" style="width:7em">
+    {{#if_equals currency_conversion_value "0"}}
+      <span>{{currencyType currency_type}}{{currency_conversion_value}}</span>
+    {{else}}
+      {{#if currency_conversion_value}}
+          <span>{{currencyType currency_type}}{{numberWithCommas currency_conversion_value}}</span>
+      {{else}}
+        {{#if_equals expected_value "0"}}
+            <span>{{currencySymbol}}{{expected_value}}</span>
+          {{/if_equals}}
+          {{#if expected_value}}
+          <span>{{currencySymbol}}{{numberWithCommas expected_value}}</span>
+         {{/if}}
+      {{/if}}
+    {{/if_equals}}</div></td>
 <td><div class="text-ellipsis" style="width:10em">{{milestone}} ({{probability}}%) </div></td>
 <td>
 <div  style="width:10em">
