billing related iteration-2 templates merged

--- a/agile-frontend/WebContent/misc/email/account_cancelled_by_user_html.html
+++ b/agile-frontend/WebContent/misc/email/account_cancelled_by_user_html.html
@@ -1,126 +1,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>AgileCRM</title>
-</head>
-<body style="margin: 0; padding: 0; background-color: #fff;">
- <div style="margin:0;padding:0"><div style="background-color:#fff!important">
-<br/>
-	<table width="600" align="center" cellpadding="0" cellspacing="0" style="background-color:#fff">
-	 <tbody>
-		<tr>
-		 <td>
-	     <table width="600" cellpadding="0" cellspacing="0">
-		  <tbody>
-		    <tr>
-			<td width="4">
-			<img src="https://agilecrm.s3.amazonaws.com/email/border-top-left.gif" width="4" height="5" alt="" style="display:block"></img>
-			</td>
-			<td width="592" valign="top">
-			<div style="border-top:1px solid #ccc;font-size:1px;line-height:1px"></div>
-			</td>
-			<td width="4">
-			<img src="https://agilecrm.s3.amazonaws.com/email/border-top-right.gif" width="4" height="5" alt="" style="display:block"></img>
-			</td>
-		   </tr>
-		  </tbody>
-		  </table>
-		 </td>
-		</tr>
-		 <tr>
-		  <td style="border-left:1px solid #ccc;border-right:1px solid #ccc">
-		 <table cellpadding="0" cellspacing="0">
-			 <tbody>
-			 <tr>
-			  <td style="padding-top:10px;padding-left:20px;padding-bottom:10px;padding-right:20px">
-			  <table width="100%" cellpadding="0" cellspacing="0">
-			  <tbody>
-				<tr>
-				 <td width="388" valign="bottom">
- <h2 style="font-family:Arial,Helvetica,sans-serif;font-size:22px;color:#000!important;margin:0;padding:0px;height:48px">Agile CRM {{agile_lng_translate 'account-email' 'account-cancelled'}}</h2>
-				 </td>
-				<td width="170" valign="bottom" align="right">
-				<img src="https://s3.amazonaws.com/agilecrm/panel/uploaded-logo/1383722651000?id=upload-container" width="150" alt="AgileCRM" style="display:block"></img>
-				</td>
-			   </tr>
-			  </tbody>
-			 </table>
-			</td>
-		   </tr>
-		 </tbody>
-		 </table>
-		<table width="100%" cellpadding="0" cellspacing="0" style="background-color:#8A6086">
-		 <tbody>
-		  <tr>
-		  <td height="5" style="font-size:1px;line-height:1px"></td>
-		 </tr>
-	    </tbody>
-	   </table>
-<br/>
-	<table cellpadding="0" cellspacing="0">
-	 <tbody>
-	  <tr>
-	   <td style="padding-right:20px;padding-left:20px;line-height:20px;font-size:14px;font-family:Lucida Grande,verdana">
-		  <br/>
-		 {{agile_lng_translate 'welcome-email' 'dear'}} {{name}},
-         <br/>
-         <br/>
-         <b>{{agile_lng_translate 'account-email' 'sorry-to-go'}}</b><br/>
-		{{agile_lng_translate 'account-email' 'sorry-to-go-confirm'}}
-         <br/>
-         <br/>
-         <b>{{agile_lng_translate 'account-email' 'data-deleted'}}</b><br/>
-       {{agile_lng_translate 'account-email' 'data-deleted-confirm'}}
-<br/>
-<br/>
-         <b>{{agile_lng_translate 'other' 'thank-you'}}</b><br/>
-         {{agile_lng_translate 'account-email' 'back-on-board'}}
-<br/>
-<br/>
-<b>{{agile_lng_translate 'verify-email' 'having-questions'}}</b><br/>
-{{agile_lng_translate 'verify-email' 'drop-us-an'}} <a  href="mailto:care@agilecrm.com" target="_blank">{{agile_lng_translate 'verify-email' 'email'}}</a> or <b>{{agile_lng_translate 'account-email' 'CALL-TOLL-FREE'}}</b> 1-800-980-0729<br/>
-<br/>
-{{agile_lng_translate 'verify-email' 'thx-for-being-a-valued-customer'}}
-<br/>
-<br/>
-{{agile_lng_translate 'welcome-email' 'crew-at-agile'}}<br/>
-<a href="https://www.agilecrm.com" target="_blank">https://www.agilecrm.com</a><br/>
-<br/>
-<span style="font-style:normal;font-family:tahoma,sans-serif;color:#999999"><i>{{agile_lng_translate 'verify-email' 'built-for-smbs'}}</i></span>
-<br/>
-<br/>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>AgileCRM</title>
+    
+  </head>
+  <body>
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color:#edf1f2;padding:6% 10%">
+      <tr>
+        <td align="center">
+          <table border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#FFFFFF" style="border:1px solid #ccc;border-radius:2px">
+            <tr>
+              <td style="font-size: 0; line-height: 0; padding: 0 10px; border-bottom:1px solid #ccc" height="70" align="center" class="responsive-image">
+                <img width="150" alt="AgileCRM" src="https://doxhze3l6s7v9.cloudfront.net/img/agile-crm-logo-1.png">
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 15px 25px 25px 25px">
+                <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'welcome-email' 'dear'}} <span style="text-transform: capitalize;">{{use_name}}</span>,</div>
+                <div style="font-weight:bold">{{agile_lng_translate 'account-email' 'sorry-to-go'}}</div>
+				   <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'account-email' 'sorry-to-go-confirm'}} </div>
+				<div style="font-weight:bold">{{agile_lng_translate 'account-email' 'data-deleted'}}</div>
+				   <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'account-email' 'data-deleted-confirm'}}</div>
+				<div style="font-weight:bold">{{agile_lng_translate 'other' 'thank-you'}}</div>
+				   <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'account-email' 'back-on-board'}} </div>
+				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">
+					{{agile_lng_translate 'welcome-email' 'support-assistance'}} <font color="blue"><a href="mailto:support@agilecrm.com" target="_blank">support@agilecrm.com</a></font>
+				</div>
+				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">
+					{{agile_lng_translate 'verify-email' 'thx-for-being-a-valued-customer'}}
+				</div>
+				<div style="font-weight: bold; font-size: 12px;">
+						{{agile_lng_translate 'welcome-email' 'crew-at-agile'}}  <br />
+					  </div>
+					  <div><a target="_blank" href="https://www.agilecrm.com" style="color:blue">https://www.agilecrm.com</a></div>
+              </td>
+            </tr>
+          </table>
         </td>
-       </tr>
-     </tbody>
+      </tr>
     </table>
-	</td>
-   </tr>
-   <tr>
-	 <td>
-	  <table width="600" cellpadding="0" cellspacing="0">
-	   <tbody>
-		 <tr>
-		  <td width="4">
-		  <img src="https://agilecrm.s3.amazonaws.com/email/border-bl.gif" alt="" width="4" height="4" style="display:block"></img>
-		  </td>
-		  <td width="592" style="border-bottom:1px solid #ccc;font-size:1px;line-height:1px"></td>
-		  <td width="4">
-		  <img src="https://agilecrm.s3.amazonaws.com/email/border-br.gif" alt="" width="4" height="4" style="display:block"></img>
-		  </td>
-		 </tr>
-		</tbody>
-	  </table>
-	</td>
-  </tr>
-		<tr>
-		<td>
-		<img src="https://agilecrm.s3.amazonaws.com/email/border-shadow.gif" width="600" height="15" alt="" style="display:block"></img>
-		</td>
-		</tr>
-	    </tbody>
-	</table>
-</div>
-</div>
-</body>
+  </body>
 </html>
