--- a/agile-frontend/WebContent/misc/email/subscription/add-on/email/plan_changed_html.html
+++ b/agile-frontend/WebContent/misc/email/subscription/add-on/email/plan_changed_html.html
@@ -30,6 +30,9 @@
 					{{agile_lng_translate 'welcome-email' 'support-assistance'}} <font color="blue">
 					<a href="mailto:support@agilecrm.com" target="_blank">support@agilecrm.com</a></font>
 				</div>
+				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">
+					{{agile_lng_translate 'verify-email' 'thx-for-being-a-valued-customer'}}
+				</div>
 				<div style="font-weight: bold; font-size: 12px;">
 						{{agile_lng_translate 'welcome-email' 'crew-at-agile'}} <br />
 					  </div>
