--- a/agile-frontend/WebContent/misc/email/subscription/payments/failed/failed_billings_first_time_html.html
+++ b/agile-frontend/WebContent/misc/email/subscription/payments/failed/failed_billings_first_time_html.html
@@ -46,13 +46,16 @@
 				
 			<tr>
 			    <td style="padding: 10px 25px 25px 25px;;color:#212121 !important">
-			    <div style="font-weight:bold">{{agile_lng_translate 'payment-fail-email' 'unfortunately-your-account-cancelled'}}</div>
+				<div style="font-weight:bold">{{agile_lng_translate 'payment-fail-email' 'unfortunately-your-account-cancelled'}}</div>
 				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'payment-fail-email' 'subscription-cancelled-after-15days'}}</div>
 				<div style="font-weight:bold">{{agile_lng_translate 'payment-fail-email' 'data-will-delete-after-48-hrs'}}</div>
 				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'payment-fail-email' 'you-can-reinstate-account-by-24-hrs'}} </div>
 				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">
 					{{agile_lng_translate 'welcome-email' 'support-assistance'}} <font color="blue">
 					<a href="mailto:support@agilecrm.com" target="_blank">support@agilecrm.com</a></font>
+				</div>
+				<div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">
+					{{agile_lng_translate 'verify-email' 'thx-for-being-a-valued-customer'}}
 				</div>
 				<div style="font-weight: bold; font-size: 12px;">
 						{{agile_lng_translate 'welcome-email' 'crew-at-agile'}}  <br />
