acc cancelled tpl merged

--- a/agile-frontend/WebContent/misc/email/account_cancelled_by_user_html.html
+++ b/agile-frontend/WebContent/misc/email/account_cancelled_by_user_html.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
               <td style="padding: 15px 25px 25px 25px">
-                <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'welcome-email' 'dear'}} <span style="text-transform: capitalize;">{{use_name}}</span>,</div>
+                <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'welcome-email' 'dear'}} <span style="text-transform: capitalize;">{{user_name}}</span>,</div>
                 <div style="font-weight:bold">{{agile_lng_translate 'account-email' 'sorry-to-go'}}</div>
 				   <div style="font-size:14px;font-family:sans-serif;padding-bottom:10px">{{agile_lng_translate 'account-email' 'sorry-to-go-confirm'}} </div>
 				<div style="font-weight:bold">{{agile_lng_translate 'account-email' 'data-deleted'}}</div>
