Add beta label to Tracking Code Verification

--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/api-key.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/api-key.html
@@ -117,7 +117,7 @@
                                         <li class="tracking-webrules-tab active"><a data-toggle="tab" href="#tracking-webrules">{{agile_lng_translate 'admin-settings-api-analytics' 'tracking-code-with-web-rules-enabled'}}</a></li>
                                         <li class="tracking-webrules-whitelist-tab active"><a data-toggle="tab" href="#tracking-webrules-whitelist">{{agile_lng_translate 'admin-settings-api-analytics' 'tracking-code-with-web-rules-whitelist-enabled'}}</a></li>
                                          <!-- tab name field-->
-                                        <li class="verification-website-tab"><a data-toggle="tab" href="#verification-website">{{agile_lng_translate 'admin-settings-api-analytics' 'tracking-code-verification'}}</a></li>
+                                        <li class="verification-website-tab"><a data-toggle="tab" href="#verification-website">{{agile_lng_translate 'admin-settings-api-analytics' 'tracking-code-verification'}} <span class="label label-sm bg-danger">{{agile_lng_translate 'deal-view' 'beta'}}</span></a></li>
                                  </ul>
                                  <div class="tab-content p-t-sm">
                                     <!--  Tracking code templete -->
