--- a/agile-frontend/WebContent/flatfull/tpl/menu-items.html
+++ b/agile-frontend/WebContent/flatfull/tpl/menu-items.html
@@ -325,7 +325,7 @@
     </li>
 
     {{#isAdmin}}
-    {{#isRestrictedMenuScope "HELPDESK"}}  {{else}}
+    {{#isRestrictedMenuScope "KNOWLEDGEBASE"}}  {{else}}
     <li id="ticketknowledgebasemenu">
     <a href="#knowledgebase">
       <i class="fa fa-search"></i>
