admin settings inners pages ui changes

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-notifications.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-notifications.html
@@ -1,7 +1,7 @@
 <script id="settings-notification-prefs-template" type="text/html">
     <div class="col">
 	<div class="hbox h-auto m-b-lg">
-        <div class="panel panel-default no-shadow">
+        <div class="panel panel-default no-shadow notifications-header">
        
             <form id="notificationsForm" name="notificationsForm" class="form-horizontal">
                 <fieldset>
