--- a/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
@@ -177,6 +177,14 @@
                 class="input col-md-12 form-control textarea" placeholder="{{agile_lng_translate 'tasks' 'add-comment'}}"></textarea>
             </div>
           </div>
+          <div class="row">
+          <div class="col-md-12">
+            <div class="control-group form-group">
+              <div id="forNoteForm" class="controls"></div>
+              <ul style="display:none;" id="notes" name="notes" class="notes"></ul>
+            </div>
+          </div>
+        </div>
           
       </fieldset>
     </form>
