change of button colors in plan and upgrade

--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/api-key.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/api-key.html
@@ -257,7 +257,7 @@
                            </div>
                         </div>
                         <div class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingTwo" id="admin-settings-sendgrid-dkim" aria-expanded="true"> 
-                         <p style="margin:10px 8px 0px 15px; text-align:justify">We encourage you to setup DKIM (DomainKeys Identified Mail) & SPF (Sender Policy Framework) in your DNS settings in order to improve your email deliverability rates and verify ownership of your sending email domain.</p>
+                         <p style="margin:10px 8px 0px 15px !important; text-align:justify">We encourage you to setup DKIM (DomainKeys Identified Mail) & SPF (Sender Policy Framework) in your DNS settings in order to improve your email deliverability rates and verify ownership of your sending email domain.</p>
                         <div class="row">
                       <div class="col-md-12 col-xs-12" id="sendgrid-dkim-restriction-template"></div>
                        <div class="col-md-12 col-xs-12" id="sendgrid-dkim-accordian-template"> <br> 
