--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-onlineschedule-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-onlineschedule-prefs.html
@@ -33,7 +33,8 @@
 									<fieldset>
 
 										<div class="row control-group form-group m-b-n-xs">
-											<label class="control-label col-sm-3">{{#isNewTheme}}{{agile_lng_translate 'prefs-online-calendar' 'scheduling-url'}}{{else}}<b>{{agile_lng_translate 'prefs-online-calendar' 'scheduling-url'}} </b>{{/isNewTheme}}</label>
+											<label class="control-label col-sm-3">
+											{{agile_lng_translate 'prefs-online-calendar' 'scheduling-url'}}</label>
 											<div class="col-sm-9">
 
 												<div
