Last contacted filter missing conditions added

--- a/agile-frontend/WebContent/flatfull/tpl/contacts-lhs-filters.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contacts-lhs-filters.html
@@ -601,7 +601,7 @@
 				<input type="text" data-date-format="mm/dd/yyyy" prev-val="" placeholder="{{agile_lng_translate 'contacts-view' 'select-date'}}" class="form-control required date text-xs" name="temp-12" id="temp-12" style="height:30px;">
 			</span>
 		</div>
-		<div class="LAST condition_container hide m-t-xs">
+		<div class="LAST ON_AFTER ON_BEFORE condition_container hide m-t-xs">
 			<span id="RHS">
 				<input type="number" placeholder="{{agile_lng_translate 'contacts-view' 'number-of-days'}}" prev-val="" class="form-control required text-xs" name="temp-13" id="temp-13" style="height:30px;">
 			</span>
