Kb:Added Acls issues

--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-user-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-user-add.html
@@ -933,7 +933,7 @@
                                 </label>
 
                                 <label class="i-checks i-checks-sm checkbox">
-                                    <input type="checkbox" name="scopes-temp" class="required pos-rlt m-t-sm" style="margin-right:-115px;"value="KNOWLEDGEBASE" {{#is_acl_allowed id}}disabled="disabled"{{/is_acl_allowed}}><i></i> 
+                                    <input type="checkbox" name="scopes-temp" class="required pos-rlt m-t-sm" style="margin-right:-115px;"value="SERVICE_KNOWLEDGEBASE" {{#is_acl_allowed id}}disabled="disabled"{{/is_acl_allowed}}><i></i> 
                                     {{agile_lng_translate 'tickets' 'acl_knowledgebase'}}<br/>
                                         <div style="margin-left:6px;"><small> {{agile_lng_translate 'tickets' 'acl_knowledgebase_text'}}
                                         </small></div>
