contact export issue

--- a/agile-frontend/WebContent/flatfull/tpl/continue/continue-contact.html
+++ b/agile-frontend/WebContent/flatfull/tpl/continue/continue-contact.html
@@ -96,7 +96,7 @@
                             	<select class="email-select form-control inline-block m-l-sm" style="width:calc(100% - 32px);">
                                 	<option></option>
                                 	<option value="work">{{agile_lng_translate 'other' 'work'}}</option>
-                                	<option value="home">{{agile_lng_translate 'contact-edit' 'home'}}</option>
+                                	<option value="home">{{agile_lng_translate 'contact-edit' 'personal'}}</option>
                             	</select>
                             
 								<a href="#" class="multiple-remove m-l-xs"><i class="icon-close"></i></a>
