send email edtior border right line issue

--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail-send-email.html
@@ -5,7 +5,7 @@
 </div>
 <div class="wrapper-md">
 <div class="row">
-<div class="col-md-10">
+<div class="col-md-10 send-email-edtior">
     
     <div class="panel panel-default">
     <div class="panel-heading">{{agile_lng_translate 'other' 'email'}}</div>
