company default image issue fix

--- a/agile-frontend/WebContent/flatfull/tpl/contact-view/contact-view-templates.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-view/contact-view-templates.html
@@ -71,7 +71,7 @@
         
 			{{#if_contact_type "COMPANY"}}
 
-        		<img class="r r-2x" style="height:35px!important; width:35px!important;" title="{{getSystemPropertyValue properties 'name'}}" {{getCompanyImage "40" "display:inline;"}}/>
+        		<img class="r r-2x" title="{{getSystemPropertyValue properties 'name'}}" {{getCompanyImage "40" "display:inline;height:35px!important; width:35px!important;"}}/>
 
         	{{/if_contact_type}}
     	</div>
