block issue in lp

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/divider2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/divider2.html
@@ -16,7 +16,7 @@
       <script src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/js/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="bodyPaddingLess">
+<body class="">
     
     <div id="page" class="page">
         
