--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout2.html
@@ -20,13 +20,13 @@
                     
                     <div class="container">
                         <div class="editContent text-center">
-                            <h2 class="" style="padding-bottom:0px;margin-top: 70px;">Top 3 Reasons to choose Agile</h2>
+                            <h2 class="" style="padding-bottom:0px;margin-top: 50px;">Top 3 Reasons to choose Agile</h2>
                         </div>
                         <div class="editContent text-center" style="font-size: 14; color: #8f8f8f;">
                             <p class="" style="margin-bottom:15px; line-height: 1.5;">All-in-One. Affordable. Next-Generation.</p>
                         </div>
                         <div class="row" style="padding-top: 15px;"> 
-                             <div class="col-sm-6 ">
+                             <div class="col-sm-6 " style="padding-top: 10px;">
                                 <div class="col-sm-11">
                                     <div class="editContent"> 
                                         <h4  style="margin-top:0px; margin-bottom:5px; font-size: 20px; line-height: 1.2;">All-in-One CRM</h4>
@@ -56,7 +56,7 @@
                             </div><!-- .col-sm-7  -->
                                                   
                            <div class="col-sm-6 col-lg-6">
-                                <div class="col-image-holder">
+                                <div class="col-image-holder text-center">
                                     <img alt="" class="img-responsive" data-selector="img" height="800" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" width="" >
                                 </div>
                              </div>
