--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newheader1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newheader1.html
@@ -30,7 +30,8 @@
                                 <button data-target="#navbar-collapse-02" data-toggle="collapse" class="navbar-toggle" type="button">
                                     <span class="sr-only">Toggle navigation</span>
                                 </button>
-                                <a href="#" class="navbar-brand brand"> Your Company</a>
+                                <a href="#" class="navbar-brand brand"> 
+                                    <img src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/icons/brush.svg" alt="" data-selector="img" style="outline: none; cursor: inherit;">Your Company</a>
                             </div>
                                     
                             <div id="navbar-collapse-02" class="collapse navbar-collapse">
